# mac-dir-stat

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-11-mac-dir-stat.md
docs/superpowers/specs/: 2026-04-11-mac-dir-stat-design.md
macos/: Info.plist.in
scripts/: bundle.sh  dmg.sh
src/: app.rs  cleanup.rs  lib.rs  main.rs  state.rs
src/platform/: dialogs.rs  finder.rs  mod.rs  trash.rs
src/scanner/: mod.rs  tree.rs  walk.rs
src/treemap/: color.rs  mod.rs  squarify.rs
src/ui/: cleanup_window.rs  context_menu.rs  dir_tree.rs  ext_list.rs  help_window.rs  mod.rs  search.rs  theme.rs  toolbar.rs  treemap_view.rs  widgets.rs
tests/: color_tests.rs  squarify_tests.rs  tree_tests.rs
