[package]
name = "mac-dir-stat"
version = "0.4.2"
edition = "2021"
description = "Treemap directory-size visualizer for macOS"
repository = "https://github.com/Chartres/mac-dir-stat"
homepage = "https://github.com/Chartres/mac-dir-stat"
keywords = ["macos", "disk", "treemap", "visualizer", "egui"]
categories = ["filesystem", "visualization"]

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
jwalk = "0.8"
crossbeam-channel = "0.5"
trash = "5"
rfd = "0.15"
libc = "0.2"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
lto = true
